--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Feb 29 18:01:14 CET 2008 Daniel Veillard <veillard@redhat.com>
+
+	* qemud/Makefile.am: fix a broken line split
+
 Fri Feb 29 12:50:00 UTC 2008 Richard W.M. Jones <rjones@redhat.com>
 
 	Many typos fixed (Atsushi SAKAI).
