--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Mon Mar  3 14:14:03 CET 2008 Jim Meyering <meyering@redhat.com>
 
+	Plug remoteReadConfigFile leak.
+	* qemud/qemud.c (remoteReadConfigFile): Be careful to free
+	"conf" after a successful virConfReadFile.
+
 	Plug two leaks: host.migrateTrans and arch.name
 	* src/capabilities.c (virCapabilitiesFree): Free host.migrateTrans.
 	(virCapabilitiesFreeGuest): Free arch.name member.
