--- a/NEWS
+++ b/NEWS
@@ -5,12 +5,66 @@
        http://libvirt.org/news.html
 
 Releases
+0.4.1: Mar 3 2008:
+   - New features: build on MacOSX (Richard Jones), storage management
+      (Daniel Berrange), Xenner - Xen on KVM - support (Daniel Berrange)
+   - Documentation: Fix of various typos (Atsushi SAKAI), memory and
+      vcpu settings details (Richard Jones), ethernet bridging typo
+      (Maxwell Bottiger), add storage APIs documentation (Daniel Berrange)
+   - Bug fixes: OpenVZ code compilation (Mikhail Pokidko), crash in
+      policykit auth handling (Daniel Berrange), large config files
+      (Daniel Berrange), cpumap hypercall size (Saori Fukuta), crash
+      in remote auth (Daniel Berrange), ssh args error (Daniel Berrange),
+      preserve vif order from config files (Hiroyuki Kaguchi), invalid
+      pointer access (Jim Meyering), virDomainGetXMLDesc flag handling,
+      device name conversion on stats (Daniel Berrange), double mutex lock
+      (Daniel Berrange), config file reading crashes (Guido Guenther),
+      xenUnifiedDomainSuspend bug (Marcus Meissner), do not crash if
+      /sys/hypervisor/capabilities is missing (Mark McLoughlin),
+      virHashRemoveSet bug (Hiroyuki Kaguchi), close-on-exec flag for
+      qemud signal pipe (Daniel Berrange), double free in OpenVZ
+      (Anton Protopopov), handle mac without addresses (Shigeki Sakamoto),
+      MAC addresses checks (Shigeki Sakamoto and Richard Jones)
+   - Improvements: Windows build (Richard Jones), KVM/QEmu shutdown
+      (Guido Guenther), catch virExec output on debug (Mark McLoughlin),
+      integration of iptables and lokkit (Mark McLoughlin), keymap
+      parameter for VNC servers (Daniel Hokka Zakrisson), enable debug
+      by default using VIR_DEBUG (Daniel Berrange), xen 3.2 fixes
+      (Daniel Berrange), Python bindings for VCPU and scheduling
+      (Daniel Berrange), framework for automatic code syntax checks
+      (Jim Meyering), allow kernel+initrd setup in Xen PV (Daniel Berrange),
+      allow change of Disk/NIC of an inactive domains (Shigeki Sakamoto),
+      virsh commands to manipulate and create storage(Daniel Berrange),
+      update use of PolicyKit APIs, better detection of fedault hypervisor,
+      block device statistics for QEmu/KVM (Richard Jones), various improvements
+      for Xenner (Daniel Berrange)
+   - Code cleanups: avoid warnings (Daniel Berrange), virRun helper
+      function (Dan Berrange), iptable code fixes (Mark McLoughlin),
+      static and const cleanups (Jim Meyering), malloc and python cleanups
+      (Jim Meyering), xstrtol_ull and xstrtol_ll functions (Daniel Berrange),
+      remove no-op networking from OpenVZ (Daniel Berrange), python generator
+      cleanups (Daniel Berrange), cleanup ref counting (Daniel Berrange),
+      remove uninitialized warnings (Jim Meyering), cleanup configure
+      for RHEL4 (Daniel Berrange), CR/LF cleanups (Richard Jones),
+      various automatic code check and associated cleanups (Jim Meyering),
+      various memory leaks (Jim Meyering), fix compilation when building
+      without Xen (Guido Guenther), mark translatables strings (Jim Meyering),
+      use virBufferAddLit for constant strings (Jim Meyering), fix
+      make distcheck (Jim Meyering), return values for python bindings (Cole
+      Robinson), trailing blanks fixes (Jim Meyering), gcc-4.3.0 fixes
+      (Mark McLoughlin), use safe read and write routines (Jim Meyering),
+      refactoring of code dealing with hypervisor capabilities (Daniel
+      Berrange), qemudReportError to use virErrorMsg (Cole Robinson),
+      intemediate library and Makefiles for compiling static and coverage
+      rule support (Jim Meyering), cleanup of various leaks (Jim Meyering)
+
+
 0.4.0: Dec 18 2007:
    - New features: Compilation on Windows cygwin/mingw (Richard Jones),
       Ruby bindings (David Lutterkort), SASL based authentication for
       libvirt remote support (Daniel Berrange), PolicyKit authentication
       (Daniel Berrange)
-   - Documentation: example files for QEMU and libvirtd configurations
+   - Documentation: example files for QEMU and libvirtd configuations
       (Daniel Berrange), english cleanups (Jim Paris), CIM and OpenVZ
       references, document <shareable/>, daemon startup when using
       QEMU/KVM, document HV support for new NUMA calls (Richard Jones),
