--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Mar 11 10:21:53 EDT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/virsh.c: Don't force connection to readonly as non-root
+	since with auth support we can have full connections.
+
 Tue Mar 11 10:17:53 EDT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* qemud/qemud.c: Don't run cleanup code when parent process is
