--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Mar 13 10:15:58 CET 2008 Daniel Veillard <veillard@redhat.com>
+
+	* src/qemu_conf.c src/qemu_driver.c: patch from Cole Robinson
+	  fixing CD Rom change on live QEmu/KVM domains.
+
 Tue Mar 11 10:45:53 EDT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/libvirt.c, configure.in: Remove use of polkit-grant since
