--- a/virsh.1
+++ b/virsh.1
@@ -241,7 +241,7 @@ capabilities in terms of \s-1CPU\s0 and features, and a set of description
 for each kind of guest which can be virtualized. For a more complete
 description see:
   <http://libvirt.org/format.html#Capa1>
-The \s-1XML\s0 also show the \s-1NUMA\s0 topology informations if available.
+The \s-1XML\s0 also show the \s-1NUMA\s0 topology information if available.
 .IP "\fBlist\fR" 4
 .IX Item "list"
 Prints information about one or more domains.  If no domains are
@@ -353,7 +353,7 @@ convert a domain Id to domain name
 Returns state about a running domain.
 .IP "\fBdumpxml\fR \fIdomain-id\fR" 4
 .IX Item "dumpxml domain-id"
-Output the domain informations as an \s-1XML\s0 dump to stdout, this format can be used by the \fBcreate\fR command.
+Output the domain information as an \s-1XML\s0 dump to stdout, this format can be used by the \fBcreate\fR command.
 .IP "\fBreboot\fR \fIdomain-id\fR" 4
 .IX Item "reboot domain-id"
 Reboot a domain.  This acts just as if the domain had the \fBreboot\fR
@@ -480,7 +480,7 @@ if more than one are present on the domain.
 .IX Header "VIRTUAL NETWORKS COMMANDS"
 The following commands manipulate networks. Libvirt has the capability to
 define virtual networks which can then be used by domains and linked to
-actual network devices. For more detailed informations about this feature
+actual network devices. For more detailed information about this feature
 see the documentation at <http://libvirt.org/format.html#Net1> . A lot
 of the command for virtual networks are similar to the one used for domains,
 but the way to name a virtual network is either by its name or \s-1UUID\s0.
