--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Mar 14 16:19:21 CET 2008 Daniel Veillard <veillard@redhat.com>
+
+	* qemud/qemud.c src/virsh.c: fixing some user facing strings
+	  problems pointed out by Francesco Tombolini should fix #436620
+
 Fri Mar 14 11:01:00 BST 2008 Richard W.M. Jones <rjones@redhat.com>
 
 	* virsh.1 docs/apibuild.py docs/architecture.html docs/errors.html
