--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Mar 14 16:55:34 CET 2008 Daniel Veillard <veillard@redhat.com>
+
+	* po/*: updated translations
+
 Fri Mar 14 16:30:27 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/bridge.c: fix a typo in a comment
