--- a/virsh.1
+++ b/virsh.1
@@ -219,7 +219,7 @@ list the values supported but the most common are:
 this is used to connect to the local Xen hypervisor, this is the default
 .IP "qemu:///system" 4
 .IX Item "qemu:///system"
-allow to connect locally as root to the daemon supervizing QEmu and \s-1KVM\s0 domains
+allow to connect locally as root to the daemon supervising QEmu and \s-1KVM\s0 domains
 .IP "qemu:///session" 4
 .IX Item "qemu:///session"
 allow to connect locally as a normal user to the his own set of QEmu and \s-1KVM\s0 domains
