--- a/NEWS
+++ b/NEWS
@@ -479,7 +479,7 @@ Releases
 
 0.1.2: Jul 3 2006:
    - headers include paths fixup
-   - proxy mechanism for unpriviledged read-only access by httpu
+   - proxy mechanism for unprivileged read-only access by httpu
 
 
 0.1.1: Jun 21 2006:
