--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Mar 17 11:09:22 EDT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/storage_backend.c: Cope with missing SELinux context
+	data by ignoring the error
+
 Mon Mar 17 11:46:09 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/libvirt.c docs/libvirt-*.xml docs/html/libvirt-libvirt.html:
