--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Mar 17 17:55:56 CET 2008 Jim Meyering <meyering@redhat.com>
+
+	Treat ENOTSUP like ENODATA, after failed fgetfilecon.
+	* src/storage_backend.c (virStorageBackendUpdateVolInfoFD): Treat a
+	failed fgetfilecon with errno == ENOTSUP the same as for ENODATA.
+
 Mon Mar 17 17:40:12 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* libvirt.c: fixed DefinedDomains function comments c.f. 437216
@@ -23,7 +29,7 @@ Mon Mar 17 11:23:32 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* NEWS virsh.1 docs//* include/libvirt/libvirt.h[.in] qemud/mdns.h
 	  src/libvirt.c src/qemu.conf src/remote_internal.c src/xend_internal.c
-	  tests/confdata/libvirtd.conf tests/confdata/libvirtd.out: patch from 
+	  tests/confdata/libvirtd.conf tests/confdata/libvirtd.out: patch from
 	  Atsushi SAKAI fixing a ot more typo
 
 Fri Mar 14 16:38:34 EDT 2008 Daniel P. Berrange <berrange@redhat.com>
@@ -62,7 +68,7 @@ Fri Mar 14 11:01:00 BST 2008 Richard W.M. Jones <rjones@redhat.com>
 
 Thu Mar 13 10:24:45 CET 2008 Daniel Veillard <veillard@redhat.com>
 
-	* src/libvirt.c: virDomainSetSchedulerParameters need to be 
+	* src/libvirt.c: virDomainSetSchedulerParameters need to be
 	  blocked on read-only connections, patch from Saori Fukuta
 
 Thu Mar 13 10:19:16 CET 2008 Daniel Veillard <veillard@redhat.com>
