--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Mar 24 11:56:58 CET 2008 Daniel Veillard <veillard@redhat.com>
+
+	* src/qemu_driver.c: remove trailing newlines from error messages
+	  patch from Guido Günther
+
 Mon Mar 24 11:47:47 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/qemu_driver.c: applied patch from Guido Günther to make error
