--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Mar 27 09:09:34 CET 2008 Daniel Veillard <veillard@redhat.com>
+
+	* src/storage_backend_iscsi.c: patch from Chris Lalancette to improve
+	  support with older versions of iscsiadm.
+
 Wed Mar 26 14:00:47 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/xen_internal.c proxy/libvirt_proxy.c: fix Xen hypercall for
